--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
       "last 1 safari version"
     ]
   },
-    "devDependencies": {
-      "axios": "^0.21.1",
-      "react-router-dom": "^5.2.0",
-      "styled-components": "^5.3.0"
-    }
-  
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.11",
+    "axios": "^0.21.1",
+    "polished": "^4.1.3",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.3.0"
+  }
 }
